--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
+    "react-async": "^10.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
